<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="#424242"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_corner_password"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="3sp"
            android:padding="12dp"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword">

            <Button
                android:id="@+id/buttonGenerate"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/generate_shape" />

            <Button
                android:id="@+id/buttonCopy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/copy_shape" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewLengthDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/characters"
            android:textColor="#808080"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLength" />

        <TextView
            android:id="@+id/textViewLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#424242"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <SeekBar
            android:id="@+id/seekBarLength"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:progressDrawable="@drawable/progress"
            android:thumb="@drawable/thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLengthDescription" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarLength">

            <CheckBox
                android:id="@+id/checkBoxUppercase"
                style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:fontFamily="sans-serif"
                android:text="@string/uppercase"
                android:textColor="#808080"
                android:textSize="14sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxLowercase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:fontFamily="sans-serif"
                android:text="@string/lowercase"
                android:textColor="#808080"
                android:textSize="14sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:fontFamily="sans-serif"
                android:text="@string/number"
                android:textColor="#808080"
                android:textSize="14sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxSymbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:fontFamily="sans-serif"
                android:text="@string/symbol"
                android:textColor="#808080"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>